--- a/etmain/default.cfg
+++ b/etmain/default.cfg
@@ -6,6 +6,17 @@ bind s "+back"
 bind a "+moveleft"
 bind d "+moveright"
 
+bind UPARROW "+forward"
+bind DOWNARROW "+back"
+bind LEFTARROW "+moveleft"
+bind RIGHTARROW "+moveright"
+bind PGDN "+moveup"
+bind PGUP "+reload"
+bind HOME "+prone"
+bind END "+movedown"
+bind o "weapprev"
+bind p "weapnext"
+
 bind SPACE "+moveup"
 bind c "+movedown"
 
@@ -35,6 +46,7 @@ bind SHIFT "+sprint"
 bind CAPSLOCK "+speed"
 
 bind f "+activate"
+bind ENTER "+activate"
 bind b "+zoom"
 bind g "+mapexpand"
 bind r "+reload"
@@ -77,3 +89,23 @@ bind KP_LEFTARROW "selectbuddy 3"
 bind KP_5 "selectbuddy 4"
 bind KP_RIGHTARROW "selectbuddy 5"
 bind KP_INS "selectbuddy -2"
+
+seta joy_threshold "0.35"
+seta in_joystick "1"
+in_joystickUseAnalog "1"
+seta cl_mouseAccel "1"
+seta sensitivity "20"
+
+seta r_gamma "1.500000"
+seta r_dynamiclight "1"
+seta r_customheight "800"
+seta r_customwidth "480"
+seta r_fullscreen "1"
+seta r_detailtextures "1"
+seta r_roundImagesDown "1"
+seta r_picmip "2"
+seta r_lodbias "2"
+seta cg_fov "90"
+
+seta s_khz "22"
+seta s_bits "16"
