osx ppc 10.4-10.5 - move flag to libs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -190,10 +190,10 @@ if(UNIX)
             set(CMAKE_OSX_SYSROOT "/Developer/SDKs/MacOSX10.4u.sdk")
 			if(CMAKE_SYSTEM_PROCESSOR MATCHES "ppc")
 				if(CMAKE_C_COMPILER_VERSION MATCHES "4.2.1")
-					set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I/usr/include -I/usr/lib/gcc/powerpc-apple-darwin8/4.2.1/include -D__powerpc__ -faltivec -I/usr/local/include/")
+					set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I/usr/include -I/usr/lib/gcc/powerpc-apple-darwin8/4.2.1/include -D__powerpc__  -I/usr/local/include/")
 					set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/usr/include -I/usr/lib/gcc/powerpc-apple-darwin8/4.2.1/include -I/usr/include/c++/4.2.1/ -I/usr/include/c++/4.2.1/powerpc-apple-darwin8/ -D__powerpc__ -I/usr/local/include/")
 				else()
-					set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I/usr/include -I/usr/lib/gcc/powerpc-apple-darwin8/4.0.1/include -D__powerpc__ -faltivec -I/usr/local/include/")
+					set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I/usr/include -I/usr/lib/gcc/powerpc-apple-darwin8/4.0.1/include -D__powerpc__ -I/usr/local/include/")
 					set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/usr/include -I/usr/lib/gcc/powerpc-apple-darwin8/4.0.1/include -I/usr/include/c++/4.0.0/ -I/usr/include/c++/4.0.0/powerpc-apple-darwin8/ -D__powerpc__ -I/usr/local/include/")
 				endif() #  TODO add clang
 			endif()
@@ -202,7 +202,7 @@ if(UNIX)
 			set(CMAKE_OSX_DEPLOYMENT_TARGET "10.5")
             set(CMAKE_OSX_SYSROOT "/Developer/SDKs/MacOSX10.5.sdk")
 			if(CMAKE_SYSTEM_PROCESSOR MATCHES "ppc")
-				set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I/usr/include -I/usr/lib/gcc/powerpc-apple-darwin8/4.2.1/include -D__powerpc__  -faltivec -I/usr/local/include/")
+				set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I/usr/include -I/usr/lib/gcc/powerpc-apple-darwin8/4.2.1/include -D__powerpc__  -I/usr/local/include/")
 				set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/usr/include -I/usr/lib/gcc/powerpc-apple-darwin8/4.2.1/include -I/usr/include/c++/4.2.1/ -I/usr/include/c++/4.2.1/powerpc-apple-darwin8/ -D__powerpc__ -I/usr/local/include/")
 			endif() #  TODO add clang
 
