--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -189,24 +189,32 @@ if(UNIX)
 			set(CMAKE_OSX_DEPLOYMENT_TARGET "10.4")
             set(CMAKE_OSX_SYSROOT "/Developer/SDKs/MacOSX10.4u.sdk")
 			if(CMAKE_SYSTEM_PROCESSOR MATCHES "ppc")
+			 if(CMAKE_C_COMPILER_ID MATCHES "GNU")
 				if(CMAKE_C_COMPILER_VERSION MATCHES "4.2.1")
 					set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I/usr/include -I/usr/lib/gcc/powerpc-apple-darwin8/4.2.1/include -D__powerpc__  -I/usr/local/include/")
 					set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/usr/include -I/usr/lib/gcc/powerpc-apple-darwin8/4.2.1/include -I/usr/include/c++/4.2.1/ -I/usr/include/c++/4.2.1/powerpc-apple-darwin8/ -D__powerpc__ -I/usr/local/include/")
+					set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L/usr/lib/gcc/powerpc-apple-darwin8/4.2.1/")
 				else()
 					set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I/usr/include -I/usr/lib/gcc/powerpc-apple-darwin8/4.0.1/include -D__powerpc__ -I/usr/local/include/")
 					set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/usr/include -I/usr/lib/gcc/powerpc-apple-darwin8/4.0.1/include -I/usr/include/c++/4.0.0/ -I/usr/include/c++/4.0.0/powerpc-apple-darwin8/ -D__powerpc__ -I/usr/local/include/")
-				endif() #  TODO add clang
+					set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L/usr/lib/gcc/powerpc-apple-darwin8/4.0.1/")	
+			 	endif()
+			 endif() #  TODO add clang
 			endif()
 
 		elseif(CMAKE_SYSTEM MATCHES "Darwin-9*")
 			set(CMAKE_OSX_DEPLOYMENT_TARGET "10.5")
             set(CMAKE_OSX_SYSROOT "/Developer/SDKs/MacOSX10.5.sdk")
 			if(CMAKE_SYSTEM_PROCESSOR MATCHES "ppc")
+			 if(CMAKE_C_COMPILER_ID MATCHES "GNU")
+				if(CMAKE_C_COMPILER_VERSION MATCHES "4.2.1")
 				set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I/usr/include -I/usr/lib/gcc/powerpc-apple-darwin8/4.2.1/include -D__powerpc__  -I/usr/local/include/")
 				set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/usr/include -I/usr/lib/gcc/powerpc-apple-darwin8/4.2.1/include -I/usr/include/c++/4.2.1/ -I/usr/include/c++/4.2.1/powerpc-apple-darwin8/ -D__powerpc__ -I/usr/local/include/")
+				set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L/usr/lib/gcc/powerpc-apple-darwin8/4.2.1/")
+			 endif()
 			endif() #  TODO add clang
-
-		else()
+		 endif()
+		else() # CMAKE_SYSTEM_PROCESSOR MATCHES
 			set(CMAKE_OSX_DEPLOYMENT_TARGET "10.7")
 			set(CMAKE_OSX_SYSROOT "${XCODE_DEVELOPER_PATH}/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.9.sdk")
 		endif()
@@ -215,7 +223,7 @@ if(UNIX)
 		set(CMAKE_CXX_FLAGS "-isysroot ${CMAKE_OSX_SYSROOT} ${CMAKE_CXX_FLAGS}")
 		
 		if(BUILD_CLIENT)
-			set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -framework Quartz -framework AudioUnit -framework Carbon")
+			set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -framework Quartz -framework AudioUnit -framework Carbon -L/usr/lib/gcc/powerpc-apple-darwin8/4.2.1/")
 		endif()
 		set(LIB_SUFFIX "_mac")
 		set(CMAKE_SHARED_MODULE_SUFFIX "")
